CSS changes and fixes to keep the header in top. Also new functionality for the double scroller.

--- a/css/main.css
+++ b/css/main.css
@@ -127,31 +127,28 @@
 
    /* distance between left-right of the plugin */
    #immo_header {
-     padding-top: 23px;
-     padding-bottom: 10px;
-     padding-left: 23px;
-     padding-right: 23px;
-     margin-bottom: 30px;
-     background-color: #F2F2F2;
+    padding-top: 23px;
+    padding-bottom: 10px;
+    padding-left: 23px;
+    padding-right: 23px;
+    margin-bottom: 30px;
+    background-color: #F2F2F2;
 
     -webkit-box-shadow: 0px 3px 2px 0px rgba(204,204,204,1);
     -moz-box-shadow: 0px 3px 2px 0px rgba(204,204,204,1);
     box-shadow: 0px 3px 2px 0px rgba(204,204,204,1);
 
-    top: 0;
-    position: fixed;
-    width: 101%;
+    width: 102%;
     z-index: 100;
    }
 
-   body.modal-open {
+  body.modal-open {
     overflow: hidden;
   }
 
    #immo_data {
      margin-left: 20px;
      margin-right: 20px;
-     margin-top:205px;
    }
 
    #immo_erweiterte_suche {
@@ -321,6 +318,10 @@
       overflow: hidden;
     }
 
+    #immo_header {
+     width: 105%;
+    }
+
   }
 
   @media (max-width: 480px) {
@@ -360,6 +361,15 @@
 
     #responsive_point_laptops {
       margin-left: 50px;
+    }
+
+    #immo_header {
+      top: 0;
+      position: fixed;
+    }
+
+    #immo_data {
+      margin-top: 200px;
     }
 
   }
